@@ -8,7 +8,8 @@ Changes from 1.1 to 1.2
 - function name is now case-insensitive
 - "Related Function" in formula editor
 - move functions in kspread_interpreter into several kspread_functions_*.cc
-
+- auto continuation support for every direction and all types supported in KSpread
+  and for more complex series like 1,3,4,6,...
 
 New functions added:
  conversion:
